kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-prod

spec:
  type: ClusterIP

  selector:
    app: nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
